Sign in and sign out button in the Settings (works!!!)